Added modal and table management
Add receipe title obfuscation

Persists receipes in localStorage

Update receipe-results table after dialog closed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,3 +73,8 @@ div.outer-modal div.inner-modal {
 div.outer-modal.hidden {
     display: none;
 }
+
+div.outer-modal div.inner-modal div.footer {
+    display: flex;
+    justify-content: flex-end;
+}
